Few more bugs with wrong width

--- a/flex/css/style.css
+++ b/flex/css/style.css
@@ -260,7 +260,7 @@ body {
   }
 
   .left, .right {
-    flex-basis: 50%;
+    /*flex-basis: 50%;*/
     box-sizing: border-box;
   }
 
